--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 license = "MIT"
 authors = ["Ville Vesilehto <ville@vesilehto.fi>"]
 description = "Cloud node discovery library"
+repository = "https://github.com/thevilledev/cloud-node-discovery-rs"
+documentation = "https://docs.rs/cloud-node-discovery"
+categories = ["api-bindings", "network-programming", "cloud"]
 
 [dependencies]
 async-trait = "0.1"
