--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,10 @@ tokio = { version = "1.0", features = ["full"] }
 aws-config = { version = "1.0", features = ["behavior-version-latest"], optional = true }
 aws-sdk-ec2 = { version = "1.0", optional = true }
 
+upcloud-sdk = { version = "0.1.0", optional = true }
+
 [features]
-default = []
+default = ["all"]
 aws = ["aws-config", "aws-sdk-ec2"]
-all = ["aws"]
+upcloud = ["upcloud-sdk"]
+all = ["aws", "upcloud"]
